--- a/styles.css
+++ b/styles.css
@@ -929,10 +929,9 @@ header nav {
 }
 
 .button:hover {
-    background-color: #b08d6a; /* Cambio de color en hover */
-}
+    background-color: #b08d6a; }
 
-/* Estilos responsivos */
+
 @media (max-width: 768px) {
     .nav-links {
         flex-direction: column;
@@ -967,4 +966,33 @@ header nav {
         width: 100%;
         right: 0;
     }
+}
+
+#scrollToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #c7a17a;
+    border: none;
+    border-radius: 75%;         
+    padding: 4px;              
+    cursor: pointer;
+    display: none;             
+    z-index: 1000;
+    width: 40px;               
+    height: 40px;               
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); 
+}
+
+#scrollToTopBtn img {
+    width: 70%;                
+    height: 70%;
+    border-radius: 50%;        }
+
+#scrollToTopBtn:hover {
+    background-color: #b08d6a;
+}
+
+#scrollToTopBtn:hover img {
+    opacity: 0.9;
 }
